--- a/index.html
+++ b/index.html
@@ -78,14 +78,20 @@
     </section>
 
     <section id="gallery">
-        <h2>Gallery</h2>
-        <div class="gallery">
-            <img src="living_room.jpg" alt="Living Room">
-            <img src="bedroom.jpg" alt="Bedroom">
-            <img src="kitchen.jpg" alt="Kitchen">
-            <img src="bathroom.jpg" alt="Bathroom">
-        </div>
-    </section>
+    <h2>Gallery</h2>
+    <div class="gallery">
+        <h3>Living Room</h3>
+        <img src="living_room1.jpg" alt="Living Room 1">
+        <img src="living_room2.jpg" alt="Living Room 2">
+        <img src="living_room3.jpg" alt="Living Room 3">
+        
+        <h3>Kitchen</h3>
+        <img src="kitchen.jpg" alt="Kitchen">
+        
+        <h3>Bedroom</h3>
+        <img src="bedroom.jpg" alt="Bedroom">
+    </div>
+</section>
 
     <section id="amenities">
         <h2>Amenities</h2>
